<resources>
    <string name="app_name">Mafia</string>
    <string name="searching_game">Searching game…</string>
    <string name="start_game">Start game</string>
    <string name="exit">Exit</string>
    <string name="start">Start</string>
    <string name="exit_to_main_screen">Exit to main screen</string>
    <string name="next">next</string>
    <string name="player_1">Player 1</string>
    <string name="player_2">Player 2</string>
    <string name="player_3">Player 3</string>
    <string name="player_4">Player 4</string>
    <string name="player_5">Player 5</string>
    <string name="player_6">Player 6</string>
    <string name="enter_nicknames_for_players">Enter nicknames for players</string>
    <string name="mafia">Mafia</string>
    <string name="instruction">Instruction</string>
    <string name="dialogTitle">Instruction</string>
    <string name="instructionText">This game completely repeats the mafia, giving you the opportunity to get rid of the leader.\n
        All players make the same number of moves, including the townspeople. At night, ordinary players make a neutral move to hide the role.
        A doctor can only heal himself once per game</string>
    <string name="history">History</string>
    <string name="state_icon">State icon</string>
    <string name="state">State</string>
    <string name="player_7">Player 7</string>
    <string name="player_8">Player 8</string>
    <string name="back">Back</string>
</resources>
